kubernetes-config/chat-backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chat-backend-service
spec:
  type: NodePort
  selector:
    app: chat-backend
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: 8090
      # nodePort: 30001
