kubernetes-config/chat-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
    spec:
      containers:
        - name: chat-backend-container
          image: rushi4350/chat-backend:backend2
          ports:
            - name: http
              containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: chat-backend-service
spec:
  type: NodePort
  selector:
    app: chat-backend
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: 8090
      nodePort: 32043
      # nodePort: 30001
