kubernetes-config/logstash-service.yaml
# logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elk
spec:
  type: ClusterIP
  ports:
    - port: 5044
      targetPort: 5044
  selector:
    app: logstash
