kubernetes-config/chat-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  labels:
    name: chat-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: chat-frontend-service
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: chat-backend-service
                port:
                  number: 8090
